2022-09-13T16:07:03Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3046624145
* notice: last 14d: unq all: 18 5269
* notice: prev accum: outdated-unq outdated-all / unq all: 1014 59597 / 1060 64871
* notice: next accum: outdated-unq outdated-all / unq all: 1014 59597 / 1060 64866
* notice: prev exec diff / last date diff / accum: unq all: +0 +123 -0 -128 / +3 +259 -0 -0 / 3 259
* notice: removed / changed dates: [] / [2022-08-30 2022-09-13]

2022-09-13T08:09:46Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3043388822
* notice: last 14d: unq all: 18 5274
* notice: prev accum: outdated-unq outdated-all / unq all: 1014 59597 / 1057 64892
* notice: next accum: outdated-unq outdated-all / unq all: 1014 59597 / 1060 64871
* notice: prev exec diff / last date diff / accum: unq all: +3 +138 -0 -159 / +3 +136 -0 -0 / 3 136
* notice: removed / changed dates: [] / [2022-08-30 2022-09-12 2022-09-13]

2022-09-13T00:34:06Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3041542432
* notice: last 14d: unq all: 18 5295
* notice: prev accum: outdated-unq outdated-all / unq all: 997 59182 / 1042 64404
* notice: next accum: outdated-unq outdated-all / unq all: 1014 59597 / 1057 64892
* notice: prev exec diff / last date diff / accum: unq all: +0 +146 -0 -13 / +2 +405 -0 -0 / 2 405
* notice: removed / changed dates: [2022-08-29] / [2022-08-30 2022-09-12]

2022-09-12T16:09:04Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3038822895
* notice: last 14d: unq all: 18 5222
* notice: prev accum: outdated-unq outdated-all / unq all: 997 59182 / 1044 64413
* notice: next accum: outdated-unq outdated-all / unq all: 997 59182 / 1042 64404
* notice: prev exec diff / last date diff / accum: unq all: +0 +122 -2 -131 / +2 +259 -0 -0 / 2 259