@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-13T16:07:03Z",
-  "count" : 259,
-  "count_minmax" : [ 136, 259 ],
-  "count_decinc" : [ -0, +259 ],
+  "timestamp" : "2022-09-14T00:33:10Z",
+  "count" : 406,
+  "count_minmax" : [ 136, 406 ],
+  "count_decinc" : [ -0, +406 ],
   "uniques" : 3,
   "uniques_minmax" : [ 3, 3 ],
   "uniques_decinc" : [ -0, +3 ]
