@@ -1,20 +1,13 @@
 {
-  "timestamp" : "2022-09-13T16:07:03Z",
-  "count_outdated" : 59597,
-  "uniques_outdated" : 1014,
-  "count" : 64866,
+  "timestamp" : "2022-09-14T00:33:10Z",
+  "count_outdated" : 59957,
+  "uniques_outdated" : 1016,
+  "count" : 65300,
   "uniques" : 1060,
   "clones" : [
     {
-      "timestamp": "2022-08-30T00:00:00Z",
-      "count": 60,
-      "count_minmax": [ 60, 360 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
-    },
-    {
       "timestamp": "2022-08-31T00:00:00Z",
-      "count": 373,
+      "count": 360,
       "count_minmax": [ 119, 373 ],
       "uniques": 5,
       "uniques_minmax": [ 2, 5 ]
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-09-13T00:00:00Z",
-      "count": 259,
-      "count_minmax": [ 136, 259 ],
+      "count": 406,
+      "count_minmax": [ 136, 406 ],
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ]
     }
