@@ -1,3 +1,11 @@
+2022-09-14T00:33:10Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3049336919
+* notice: last 14d: unq all: 18 5343
+* notice: prev accum: outdated-unq outdated-all / unq all: 1014 59597 / 1060 64866
+* notice: next accum: outdated-unq outdated-all / unq all: 1016 59957 / 1060 65300
+* notice: prev exec diff / last date diff / accum: unq all: +0 +147 -0 -13 / +3 +406 -0 -0 / 3 406
+* notice: removed / changed dates: [2022-08-30] / [2022-08-31 2022-09-13]
+
 2022-09-13T16:07:03Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3046624145
 * notice: last 14d: unq all: 18 5269
